# llm-hallucination-detector

./: LICENSE  README.md  pyproject.toml
llmscan/: __init__.py  activations.py  attention_extractor.py  attention_probe.py  layer_selector.py  tcn.py  xgboost_probe.py
notebooks/: 01_Layer_selection.ipynb  02_Train_on_a_single_activation_layer.ipynb  03_Train_on_multiple_activations.ipynb  04_Train_on_attention_layer.ipynb  hallucination_probe_layer_16.pkl  hallucination_probe_layers_15_16.pkl  hallucination_probe_layers_15_16_18.pkl
report/: technical_report.md
