[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmscan"
version = "0.1.0"
description = "A lightweight library for extracting and analysing LLM internal representations"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Julien Brasseur"}]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "tqdm>=4.65.0",
    "accelerate>=0.25.0",
    "matplotlib>=3.7.0",
]

[project.urls]
Repository = "https://github.com/julienbrasseur/llm-hallucination-detector"

[tool.setuptools.packages.find]
include = ["llmscan*"]